<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">News</string>
    <string name="login_with_nextcloud">Login with Nextcloud (direct)</string>
    <string name="post_image">Post image</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="show_read_news">Show read news</string>
    <string name="hide_read_news">Hide read news</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="logo">Logo</string>
    <string name="log_out">Log out</string>
    <string name="log_out_warning">Do you really want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="direct_login_failed">Could not connect to server. Please make sure your login info is correct.</string>
    <string name="server_url_hint">https://example.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="news_list_is_empty">News list is empty</string>
    <string name="you_have_no_bookmarks">You have no bookmarks</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="error">Error</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="listen">Listen</string>
    <string name="crop_feed_images">Crop preview images</string>
    <string name="feeds">Feeds</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete_all">Delete all</string>
    <string name="open_xml_link">Open feed</string>
    <string name="open_html_link">Open website</string>
    <string name="actions">Actions</string>
    <string name="delete">Delete</string>
    <string name="add_feed">Add feed</string>
    <string name="add">Add</string>
    <string name="show_feed_images">Show preview images</string>
    <string name="rename">Rename</string>
    <string name="feed_title">Feed title</string>
    <string name="cannot_find_entry_with_id_s">Can not find entry with id %1$s</string>
    <string name="share">Share</string>
    <string name="nextcloud_login">Nextcloud login</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="delete_all_data_warning">This action will reset the app and delete all of the data.</string>
    <string name="standalone_mode">Standalone mode (beta)</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="do_you_want_to_connect_to_nextcloud">Do you want to connect to your Nextcloud server manually?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_newest_first">Show newest first</string>
    <string name="show_oldest_first">Show oldest first</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="search">Search</string>
    <string name="clear_search_input">Clear search input</string>
    <string name="you_have_no_apps_which_can_play_this_podcast">You have no apps which can play this podcast.</string>
    <string name="import_feeds_from_opml_file">Import from OPML file</string>
    <string name="export_feeds_to_opml_file">Export to OPML file</string>
    <string name="undo">Undo</string>
    <string name="retry">Retry</string>
    <string name="you_have_no_unread_news">You have no unread news</string>
    <string name="importing_feeds_n_of_n">Importing feeds (%1$d of %2$d)</string>
    <string name="mark_scrolled_entries_as_read">Mark scrolled entries as read</string>
    <string name="import_title">Import</string>
    <string name="added_d">Added: %1$d</string>
    <string name="exists_d">Exists: %1$d</string>
    <string name="failed_d">Failed: %1$d</string>
    <string name="open_feed_settings">Open feed settings</string>
    <string name="fetch_news_on_startup">Fetch news on startup</string>
    <string name="open_entries_in_browser">Open entries in browser</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="cannot_find_feed_with_id_s">Can not find feed with id %1$s</string>
    <string name="blocked_words">Blocked words</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="comma_separated">comma-separated</string>
    <string name="fetch_news_in_background">Sync in background</string>
    <string name="background_sync_interval">Background sync interval</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="event_log_is_empty">Event log is empty</string>
    <string name="event_log">Event log</string>
    <string name="view_event_log">View event log</string>
    <string name="unread_news">Unread news</string>
    <string name="got_exception_of_class_s">Got %1$s. See exception log for details</string>
    <string name="trust_self_signed_certificates">Trust self-signed certificates</string>
    <string name="you_have_no_feeds">You have no feeds</string>
    <string name="export_database">Export database</string>
    <string name="invalid_url_s">Invalid URL: %1$s</string>
    <string name="preview_images">Preview images</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="follow_settings">Follow settings</string>
    <string name="podcasts">Podcasts</string>
    <string name="nextcloud">Nextcloud</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="miniflux_login">Miniflux Login</string>
    <string name="login_with_miniflux">Login with Miniflux</string>
    <string name="miniflux">Miniflux</string>
    <string name="opml_file_is_invalid">OPML file is invalid</string>
    <string name="stack_trace">Stack trace</string>
    <string name="stack_trace_icon">Stack trace icon</string>
    <string name="feed_url">Feed URL</string>
    <string name="view_comments">View comments</string>
    <string name="login_with_nextcloud_app">Login with Nextcloud (app)</string>
    <string name="standalone_mode_no_beta">Standalone mode</string>
    <string name="beta">⚠ BETA ⚠</string>
    <plurals name="d_hours">
        <item quantity="zero">%d hours</item>
        <item quantity="one">%d hour</item>
        <item quantity="two">%d hours</item>
        <item quantity="few">%d hours</item>
        <item quantity="many">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="you_have_d_unread_news">
        <item quantity="zero">You have %d unread news</item>
        <item quantity="one">You have %d unread news</item>
        <item quantity="two">You have %d unread news</item>
        <item quantity="few">You have %d unread news</item>
        <item quantity="many">You have %d unread news</item>
        <item quantity="other">You have %d unread news</item>
    </plurals>
</resources>