<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/showOpenedEntries"
        android:title="@string/show_read_news"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:title="@string/show_oldest_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/markAllAsRead"
        android:title="@string/mark_all_as_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>