<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/openSettings"
        android:title="@string/open_feed_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/openSelfLink"
        android:title="@string/open_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/openAlternateLink"
        android:title="@string/open_html_link"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>