<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/newsFragment"
            android:checked="true"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/news" />
        <item
            android:id="@+id/bookmarksFragment"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/feedsFragment"
            android:icon="@drawable/ic_baseline_rss_feed_24"
            android:title="@string/feeds" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>