<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/openEntriesInBrowser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_entries_in_browser"
                android:textAppearance="?textAppearanceListItem" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/showPreviewImagesPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_images"
                android:textAppearance="?textAppearanceListItem" />

            <TextView
                android:id="@+id/showPreviewImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:textAppearance="?textAppearanceListItemSecondary"
                tools:text="Follow settings" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/blockedWordsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blocked_words"
                android:textAppearance="?textAppearanceListItem" />

            <TextView
                android:id="@+id/blockedWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/the_list_is_empty"
                android:textAppearance="?textAppearanceListItemSecondary" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </LinearLayout>

</ScrollView>