<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    style="?materialCardViewOutlinedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height_optimal"
                android:contentDescription="@string/post_image"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/imageProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:visibility="visible"
                tools:text="Bla" />

            <TextView
                android:id="@+id/secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Foo Bar | Jan 3, 2020 6:42 AM" />

            <TextView
                android:id="@+id/supportingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Bla bla bla"
                tools:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/podcastPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/downloadPodcast"
                style="?materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/download"
                android:visibility="gone"
                app:icon="@drawable/ic_baseline_save_alt_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/downloadingPodcast"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:enabled="false"
                android:text="@string/downloading"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playPodcast"
                style="?materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/listen"
                android:visibility="visible"
                app:icon="@drawable/ic_baseline_headset_24" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/downloadPodcastProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:progress="25" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>